Modified Readme to add tools setup