@@ -1,4 +1,4 @@
-# Play Java
+# Connect4 Game
 A mini game written in Java, to practice OOP.
 
 ## Idea
@@ -35,3 +35,10 @@ Using Scene Builder a first GUI design is proposed. Based on this [FXML file]
 ![GUI_Design_v1](images/7-account.JPG "Fantastic Four GUI Design from Scene Builder")
 ![GUI_Design_v1](images/8-help.JPG "Fantastic Four GUI Design from Scene Builder")
 
+## How to get it running on your machine
+ * Install JAVA and JavaFX libraries
+ * Add JAVA_HOME to Windows environment variables
+ * set PATH_TO_FX="path\to\javafx-sdk-15.0.1\lib"
+ * In IntelliJ, Select menu Run --> Edit Configurations
+ * Add the following line to the VM configurations
+	* Run --> Edit Configurations --> Check VM Options from "Modify Options" --module-path "C:\Program Files\Java\jdk-16\javafx-sdk-16\lib" --add-modules javafx.controls,javafx.fxml
